# mk-qa-master

./: .dockerignore  .gitguardian.yaml  .gitguardian.yml  .gitignore  CNAME  Dockerfile  LICENSE.zh-TW.md  README.md  README.zh-TW.md  claude_desktop_config.example.json  codex-config.example.toml  framework.md  gemini-config.example.json  index.html  intro.html  og-image.html  pyproject.toml  qa-knowledge.example.md  sample_report.html  smithery.yaml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_suggestion.yml
.github/PULL_REQUEST_TEMPLATE/: feat-bookend.md  feat-runner.md  feat-tool.md  release.md
.github/workflows/: ci.yml  dogfood-real-recaptcha.yml  external-pr-policy.yml  publish.yml
assets/: og-image.html
docs/: DEPRECATION-POLICY.md  MIGRATION-0.x-to-1.0.md  MIGRATION-1.x.md  RELICENSING.md  demo-video-script.md  framework.md  prd-v0.10-universal-bookend.md  prd-v0.6-api-testing.md  prd-v0.7-visual-challenge.md  prd-v0.7.1-hcaptcha.md  prd-v0.8-api-security.md  prd-v0.8-mobile-webview-captcha.md  prd-v1.0-stability-lock.md  prd-v1.1-edge-ai-runner.md  prd-v1.2-edge-ai-phase-3.md  prd-v1.3-edge-ai-phase-4.md  qa-knowledge-en.example.md  qa-knowledge.example.md  smithery-listing.md  v0.10-planning.md  v0.11-planning.md  v0.8-mobile-postmortem.md  v1.1-planning.md  v1.2-planning.md  v1.3-planning.md  walkthrough-api.md  walkthrough-visual-challenge.md
examples/: closed_loop_solver.py
examples/configs/: claude_desktop_config.example.json  codex-config.example.toml  gemini-config.example.json
examples/sample_api_project/: README.md  openapi.yaml  postman-collection.json
examples/sample_captcha_fixture/: README.md  iframe.html  index.html
examples/sample_captcha_mobile_app/: .gitignore  README.md  build.sh  project.yml
examples/sample_captcha_mobile_app/Sources/: ContentView.swift  FixtureWebView.swift  SampleCaptchaApp.swift
examples/sample_edge_fixture/: README.md  factory.annotations.json
examples/sample_hcaptcha_fixture/: README.md  iframe.html  index.html
examples/sample_vulnerable_api/: README.md  app.py  openapi.yaml
examples/sample_vulnerable_api/tests/: test_fixture_vulnerable.py  test_rule_bola_fla_dogfood.py  test_rule_broken_auth_dogfood.py  test_rule_headers_dogfood.py  test_rule_mass_assignment_dogfood.py  test_runner_api_security_dogfood.py  test_runner_api_security_plan_dogfood.py
scripts/: dogfood-inspect-only.py  dogfood-recaptcha.py  spike-maestro-perf.py
skills/mk-qa-master/: SKILL.md
skills/mk-qa-master/commands/: api-security.md  generate.md  run-tests.md
skills/mk-qa-master/reference/: tool-surface.md  wire-mcp.md  workflow.md
src/mcp_test_runner/: config.py  security.py  server.py
src/mcp_test_runner/reporters/: html.py
src/mcp_test_runner/runners/: base.py  cypress.py  jest.py  maestro.py  pytest_playwright.py
src/mcp_test_runner/tools/: analyzer.py  generator.py  qa_context.py  runner.py
src/mk_qa_master/: __init__.py  config.py  doctor.py  server.py
src/mk_qa_master/edge/: __init__.py  ground_truth.py  inference.py  metrics.py  pytest_plugin.py  resilience.py  rtsp_source.py
src/mk_qa_master/reporters/: html.py
src/mk_qa_master/resources/: __init__.py
src/mk_qa_master/runners/: __init__.py  api_security.py  edge_inference.py  go_test.py  jest.py  newman.py  schemathesis.py
src/mk_qa_master/security_rules/: __init__.py  base.py  bola.py  broken_auth.py  headers_misconfig.py  mass_assignment.py
src/mk_qa_master/tools/: __init__.py  analyze_stream.py  analyzer.py  generator.py  optimizer.py  qa_context.py  qa_plan.py  runner.py  visual_challenge.py  visual_challenge_driver.py
src/testbridge_runner/: config.py  server.py
src/testbridge_runner/reporters/: html.py
src/testbridge_runner/resources/: reports.py
src/testbridge_runner/runners/: __init__.py  base.py  cypress.py  go_test.py  pytest_playwright.py
src/testbridge_runner/tools/: __init__.py  generator.py  reporter.py  runner.py  telemetry.py
tests/: test_analyze_stream.py  test_analyze_url_plan_id.py  test_auto_generate_plan_id.py  test_ci_ack_check_workflow.py  test_doctor.py  test_edge_config.py  test_edge_ground_truth.py  test_edge_inference.py  test_edge_metrics.py  test_edge_resilience.py  test_edge_rtsp_source.py  test_edge_runner.py  test_html_reporter_edge_metrics.py  test_init_qa_knowledge_runner_aware.py  test_optimizer_edge_signals.py  test_qa_plan.py  test_qa_plan_auto_discover.py  test_qa_plan_persistence.py  test_runner_api_security.py  test_runner_api_security_plan.py  test_runner_tool_plan_id.py  test_security_rules_bola_fla.py  test_security_rules_broken_auth.py  test_security_rules_headers.py  test_security_rules_mass_assignment.py  test_skill_distribution.py  test_smoke.py  test_solve_visual_challenge_plan_id.py  test_v1_deprecation_policy.py  test_v1_doc_sync.py  test_v1_schema_snapshot.py  test_visual_challenge.py
tests/snapshots/v1/: tool_surface.json
tests_project/: .newman-report.json  conftest.py  test_example.py
