[project]
name = "mk-qa-master"
version = "0.9.0"
description = "MCP server + cross-host agent skill for running tests across pytest / Jest / Cypress / Go test / Maestro / Schemathesis / Newman (web + mobile + native API via OpenAPI + Postman collections), with self-improvement analytics, a bilingual (EN / zh-TW) built-in QA knowledge layer, an AI Visual Challenge Solver for reCAPTCHA v2 + hCaptcha image-grid challenges, and an OWASP API Top 10 (2023) security scanner. v0.9.0 adds cross-host packaging: the same skill folder loads in Claude Code, OpenAI Codex, OpenClaw, and Hermes via the agentskills.io convention (AI 測試大師)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jack Kao", email = "52775937+kao273183@users.noreply.github.com" }]
keywords = ["mcp", "testing", "qa", "pytest", "playwright", "jest", "cypress", "maestro", "schemathesis", "newman", "postman", "openapi", "api-testing", "owasp", "security", "vulnerability-scanner", "automation", "model-context-protocol", "claude-code", "codex-plugin", "agent-skill", "agentskills"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "pytest>=8.0.0",
    "pytest-playwright>=0.4.0",
    "pytest-json-report>=1.5.0",
    # v0.8.0: API security scanner needs HTTP + JWT tampering + YAML spec loading.
    "requests>=2.31",
    "PyJWT>=2.8",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Native API testing via Schemathesis (QA_RUNNER=schemathesis). Optional so
# the base install stays slim; users opt in with `pip install 'mk-qa-master[api]'`.
api = ["schemathesis>=3.0,<4"]

[project.urls]
Homepage = "https://github.com/kao273183/mk-qa-master"
Repository = "https://github.com/kao273183/mk-qa-master"

[project.scripts]
mk-qa-master = "mk_qa_master.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mk_qa_master"]
