[project]
name = "mk-qa-master"
version = "0.9.5"
description = "MCP server + cross-host agent skill (Claude Code / Codex / OpenClaw / Hermes via agentskills.io) for running tests across pytest / Jest / Cypress / Go / Maestro / Schemathesis / Newman, with self-improvement analytics, bilingual EN/zh-TW QA knowledge, the v0.7 AI Visual Challenge Solver (reCAPTCHA / hCaptcha), the v0.8 OWASP API Top 10 (2023) security scanner, and the v0.9 plan + verify bookend pattern (AI 測試大師)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jack Kao", email = "52775937+kao273183@users.noreply.github.com" }]
keywords = ["mcp", "testing", "qa", "pytest", "playwright", "jest", "cypress", "maestro", "schemathesis", "newman", "postman", "openapi", "api-testing", "owasp", "security", "vulnerability-scanner", "automation", "model-context-protocol", "claude-code", "codex-plugin", "agent-skill", "agentskills"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "pytest>=8.0.0",
    "pytest-playwright>=0.4.0",
    "pytest-json-report>=1.5.0",
    # v0.8.0: API security scanner needs HTTP + JWT tampering + YAML spec loading.
    "requests>=2.31",
    "PyJWT>=2.8",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Native API testing via Schemathesis (QA_RUNNER=schemathesis). Optional so
# the base install stays slim; users opt in with `pip install 'mk-qa-master[api]'`.
api = ["schemathesis>=3.0,<4"]

[project.urls]
Homepage = "https://github.com/kao273183/mk-qa-master"
Repository = "https://github.com/kao273183/mk-qa-master"

[project.scripts]
mk-qa-master = "mk_qa_master.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mk_qa_master"]
