[project]
name = "mk-qa-master"
version = "1.4.0"
description = "Stable since v1.0.0 — MCP server + cross-host agent skill (Claude Code / Codex / OpenClaw / Hermes) for QA testing across pytest / Jest / Cypress / Go / Maestro / Schemathesis / Newman, plus v1.1 Edge AI Runner (RTSP + YOLO). 22 frozen tools, bilingual EN/zh-TW QA knowledge, AI Visual Challenge Solver (reCAPTCHA / hCaptcha), OWASP API Top 10 (2023) scanner, universal qa_plan + verify bookend across 5 core tools (AI 測試大師)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jack Kao", email = "52775937+kao273183@users.noreply.github.com" }]
keywords = ["mcp", "testing", "qa", "pytest", "playwright", "jest", "cypress", "maestro", "schemathesis", "newman", "postman", "openapi", "api-testing", "owasp", "security", "vulnerability-scanner", "automation", "model-context-protocol", "claude-code", "codex-plugin", "agent-skill", "agentskills"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "pytest>=8.0.0",
    "pytest-playwright>=0.4.0",
    "pytest-json-report>=1.5.0",
    # v0.8.0: API security scanner needs HTTP + JWT tampering + YAML spec loading.
    "requests>=2.31",
    "PyJWT>=2.8",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Native API testing via Schemathesis (QA_RUNNER=schemathesis). Optional so
# the base install stays slim; users opt in with `pip install 'mk-qa-master[api]'`.
api = ["schemathesis>=3.0,<4"]
# v1.1.0 — Edge AI Inference Runner (QA_RUNNER=edge). Heavy (ultralytics
# pulls torch, ~1GB); kept optional so base users don't take the hit.
# `ultralytics>=8,<9` per PRD §11 #2 (locked against future major-version
# output-shape changes that would silently break generated tests).
edge = [
  "opencv-python>=4.9",
  "ultralytics>=8,<9",
  "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/kao273183/mk-qa-master"
Repository = "https://github.com/kao273183/mk-qa-master"

[project.scripts]
mk-qa-master = "mk_qa_master.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mk_qa_master"]
